Fixed deployment issues

--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,19 +1,105 @@
-#.dockerignore
- 
-.vscode
- 
-node_modules
- 
-.git
-.gitattributes
- 
-.eslintignore
-.eslintrc.cjs
- 
-.prettierrc
-.pretieriignore
+# =============================================================================
+# Node.js
+# =============================================================================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm/
+.yarn/
 
- 
-README.md
- 
+# =============================================================================
+# Build outputs (will be generated fresh in container)
+# =============================================================================
+build/
+dist/
+.svelte-kit/
+
+# =============================================================================
+# IDE & Editors
+# =============================================================================
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+*.sublime-project
+*.sublime-workspace
+
+# =============================================================================
+# Git
+# =============================================================================
+.git/
+.gitattributes
+.gitignore
+
+# =============================================================================
+# Linting & Formatting Config (not needed in container)
+# =============================================================================
+.eslintignore
+.eslintrc*
+eslint.config.*
+.prettierrc*
+.prettierignore
+
+# =============================================================================
+# Environment & Secrets
+# =============================================================================
+.env
+.env.*
+.env.local
+!.env.example
+
+# =============================================================================
+# Documentation
+# =============================================================================
+*.md
+docs/
+
+# =============================================================================
+# Docker (avoid recursive copy)
+# =============================================================================
 Dockerfile
+Dockerfile.*
+docker-compose*.yml
+.dockerignore
+
+# =============================================================================
+# Testing
+# =============================================================================
+coverage/
+.nyc_output/
+*.test.js
+*.test.ts
+*.spec.js
+*.spec.ts
+__tests__/
+tests/
+test/
+
+# =============================================================================
+# OS Generated
+# =============================================================================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# =============================================================================
+# Logs & Temp
+# =============================================================================
+*.log
+logs/
+tmp/
+temp/
+
+# =============================================================================
+# Misc
+# =============================================================================
+*.bak
+*.backup
+*.local
